# prml-vslam

./: .gitattributes  .gitignore  .gitmodules  .graphifyignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  GEMINI.md  LICENSE  Makefile  README.md  ROADMAP.md  SETUP.md  TODOS.md  environment.yml  pyproject.toml  streamlit_app.py
.agents/: AGENTS_INTERNAL_DB.md  SETUP.md  issues.toml  refactors.toml  resolved.toml  streamlit-app-responsibility-issues.md  streamlit-app-simplification-loc-ranking.md  todos.toml
.agents/references/: agent_reference.md  prml-vslam-docstrings.md  prompt-corpus-guidance.md  ray-runtime-patterns.md
.agents/scripts/: agents_db.py  codex_history.py  mempalace_startup_context.sh
.agents/skills/agents-db/: SKILL.md
.agents/skills/agents-db-and-simplification/: SKILL.md
.agents/skills/autoresearch-vslam/: SKILL.md
.agents/skills/create-pr/: SKILL.md
.agents/skills/gh-issue-lifecycle/: SKILL.md
.agents/skills/graphify/: SKILL.md
.agents/skills/mempalace-repo/: SKILL.md
.agents/skills/python-docstrings/: SKILL.md
.agents/skills/rerun-slam-integration/: SKILL.md
.agents/skills/simplification/: SKILL.md
.agents/skills/understanding-streamlit-architecture/: SKILL.md
.codex/: config.toml  hooks.json
.codex-plugin/: README.md  plugin.json
.configs/methods/vista/: vista.toml
.configs/pipelines/: advio-15-offline-mast3r.toml  advio-15-offline-vista.toml  advio-17-offline-mast3r.toml  advio-offline-advio-15-vista.toml  offline-advio-15-vista-trajectory-eval.toml  offline-advio-15-vista.toml  vista-full-record3d-wifi.toml  vista-full.toml  vista-smoke-test.toml
.configs/visualization/: vista_blueprint.rbl
.gemini/: settings.json
.github/: CODEOWNERS
.github/workflows/: ci.yml  claude-code-review.yml  quarto-publish.yml
.streamlit/: config.toml
docs/: AGENTS.md  Questions.md  TODOS.md  _quarto.yml  agent_reference.md  framework-method-research.md  index.qmd  pipeline-wrapper-design.md  references.bib  workpackages.md
docs/architecture/: interfaces-and-contracts.md  pipeline-dto-migration-ledger.md  pipeline-refactor-review-a01-actions.md  pipeline-refactor-target-dir-tree.md  pipeline-stage-artifact-cleanup-policy.md  pipeline-stage-present-state-audit.md  pipeline-stage-protocols-and-dtos.md  pipeline-stage-refactor-pruning.md  pipeline-stage-refactor-target-prev.md  pipeline-stage-refactor-target.md  reconstruction-stage-target.md
docs/architecture/pipeline-refactor-work-packages/: README.md  WP-00-spec-freeze.md  WP-00A-baseline-acceptance.md  WP-00B-dto-class-inventory-audit.md  WP-00B-inventory-notes.md  WP-01-contracts.md  WP-02-config-planning.md  WP-03A-telemetry-status.md  WP-09A-target-config-launch-cutover.md  WP-09B-runtime-coordinator-cutover.md  WP-10-migration-removal.md  (+2 more)
docs/figures/: mermaid_pipeline_boundaries.mmd  mermaid_pipeline_request_flow.mmd  mermaid_pipeline_session_state.mmd
docs/report/: charged_ieee_local.typ  main.typ
docs/slides/: hm-slides-template.typ  template.typ
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json
lecture-material/: update-meeting-template.pptx
literature/research-db/: README.md  build_db.py  schema.sql  seed_data.json  vslam_to_3dgs.sqlite
literature/tex-src/: README.md
scripts/: build_vista_curope.py  download_arxiv_tex_src.py  generate_open3d_stubs.py  loc_stats.py  smoke_mast3r.py  vista_rerun_viewer.py  visualize_reconstruction_artifacts.py
src/prml_vslam/: AGENTS.md  README.md  REFACTOR_PLAN.md  REQUIREMENTS.md  __init__.py  app.py  cli_advio.py  cli_support.py  main.py  path_config.py
tests/: __init__.py  pipeline_legacy.py  pipeline_testing_support.py  test_advio.py  test_advio_page.py  test_advio_replay_adapter.py  test_agents_db.py  test_app.py  test_app_services.py  test_artifact_inspection.py  test_base_config.py  test_bounded_stage_runtimes.py  test_cli.py  test_codex_history.py  test_console.py  test_datasets.py  test_eval.py  test_geometry.py  test_ground_alignment.py  test_ground_alignment_pipeline.py  test_imports.py  test_intrinsics_eval.py  test_main.py  test_method_install.py  test_methods.py  test_package_exports.py  test_path_config.py  test_pipeline.py  test_pipeline_config.py  test_pipeline_runtime_skeleton.py  test_pipeline_stage_contracts.py  test_plotting.py  test_reconstruction.py  test_reconstruction_artifact_visualizer.py  test_reconstruction_visualization_adapter.py  test_record3d.py  test_record3d_wifi.py  test_removed_pipeline_compatibility_surface.py  test_rerun_follow.py  test_rerun_layout_semantics.py  (+14 more)
tests/integration/: vista_full_streaming_integration.py
typings/open3d/: __init__.pyi
typings/vista_slam/: __init__.pyi
(+607 files in other folders)
