[project]
name = "prml-vslam"
version = "0.1.0"
description = "Off-device monocular VSLAM benchmark scaffold for uncalibrated smartphone video."
readme = "README.md"
requires-python = ">=3.11,<3.12"
authors = [{ name = "Jan Duchscherer", email = "j.duchscherer@gmail.com" }]
dependencies = [
  "numpy>=1.26,<3",
  "scipy>=1.13,<2",
  "opencv-python>=4.10,<5",
  "open3d>=0.19.0,<0.20",
  "matplotlib>=3.8,<4",
  "pooch>=1.8,<2",
  "plotly>=6.6.0,<7",
  "evo>=1.31,<2",
  "pydantic>=2.11,<3",
  "ray>=2.40,<3",
  "rich>=13.7,<15",
  "seaborn>=0.13,<1",
  "streamlit>=1.35,<2",
  "tqdm>=4.66,<5",
  "tomli-w>=1.2,<2",
  "typer>=0.12,<1",
  "jaxtyping>=0.3.9",
  "pytransform3d>=3.14.4",
  "PyYAML>=6,<7",
]

  [project.optional-dependencies]
  dev = [
    "bibtex-updater>=0.8.0",
    "mypy>=1.11,<2",
    "pre-commit>=4.2,<5",
    "pybind11-stubgen>=2.5,<3",
    "pytest>=8.3,<9",
    "pytest-xdist>=3.6,<4",
    "rebiber>=1.1.3",
    "ruff>=0.11,<1",
  ]
  replay = ["av>=16,<17"]
  streaming = ["aiortc>=1.9,<2", "record3d>=1.4.1,<2"]
  vista = [
    "torch==2.5.1",
    "torchvision==0.20.1",
    "torchaudio==2.5.1",
    "xformers",
    "rerun-sdk==0.24.1",
    "pypose>=0.6",
    "einops>=0.6",
    "munch>=2.5",
    "pykdtree>=1.3",
    "tensorboard>=2.14,<3",
    "DBoW3Py",
  ]

  [project.scripts]
  prml-vslam = "prml_vslam.main:main"

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prml_vslam"]

[tool.ruff]
target-version = "py311"
line-length    = 120
extend-exclude = ["external", "typings/open3d"]

  [tool.ruff.lint]
  select = ["B", "E", "F", "I", "UP"]
  ignore = ["E501"]

  [tool.ruff.format]
  quote-style  = "double"
  indent-style = "space"
  line-ending  = "auto"

[tool.pytest.ini_options]
testpaths    = ["tests"]
python_files = ["test_*.py"]
addopts      = "-vv -ra --strict-markers --capture=no -p no:dash"

[tool.uv]
  [tool.uv.extra-build-dependencies]
  xformers = ["torch==2.5.1"]

  [tool.uv.sources]
  DBoW3Py = { path = "external/vista-slam/DBoW3Py", editable = false }

[tool.mypy]
python_version      = "3.11"
strict              = false
warn_unused_configs = true
packages            = ["prml_vslam"]
mypy_path           = ["$MYPY_CONFIG_FILE_DIR/src", "$MYPY_CONFIG_FILE_DIR/typings"]

  [[tool.mypy.overrides]]
  module = [
    "cv2",
    "cv2.*",
    "numpy",
    "numpy.*",
    "pydantic",
    "pydantic.*",
    "pytest",
    "pytest.*",
    "streamlit",
    "streamlit.*",
    "tomli_w",
    "tomli_w.*",
    "torch",
    "torch.*",
  ]
  ignore_missing_imports = true

  [[tool.mypy.overrides]]
  module = [
    "open3d",
    "open3d.*",
  ]
  ignore_errors = true

[dependency-groups]
dev = [
  "graphifyy>=0.4.26",
  "mcp>=1.27.0",
]
